--- a/data/style/Grid.css
+++ b/data/style/Grid.css
@@ -1,19 +1,7 @@
 /*
-*  Copyright 2018-2019 elementary, Inc. (https://elementary.io)
-*
-*  This program is free software: you can redistribute it and/or modify
-*  it under the terms of the GNU General Public License as published by
-*  the Free Software Foundation, either version 3 of the License, or
-*  (at your option) any later version.
-*
-*  This program is distributed in the hope that it will be useful,
-*  but WITHOUT ANY WARRANTY; without even the implied warranty of
-*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-*  GNU General Public License for more details.
-*
-*  You should have received a copy of the GNU General Public License
-*  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-*/
+ * SPDX-License-Identifier: GPL-3.0-or-later
+ * SPDX-FileCopyrightText: 2018-2025 elementary, Inc. (https://elementary.io)
+ */
 
 .cell {
     background-color: @base_color;
@@ -45,8 +33,8 @@
     color: @fg_color;
 }
 
-.cell > #date {
-    font-size: 8px;
+.cell > box {
+    margin: 3px;
 }
 
 #date {
